--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "MadaMaid",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#16a34a",
   "theme_color": "#16a34a",
   "icons": [
     {
@@ -15,6 +15,12 @@
       "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    }
+  ],
+  "splash_pages": [
+    {
+      "src": "/splash.html",
+      "type": "text/html"
     }
   ]
 }
